<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userloginroot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/dk_bg">

    <RelativeLayout
        android:id="@+id/dk_login_title"
        style="@style/tabbar_top_style"
        android:layout_gravity="center_vertical"
         >

        <ImageView
            android:id="@+id/dk_btn_back_req_bind_phone"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/dk_ic_back_ab"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"/>
		
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            >
            
        	<TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:gravity="center"
	            android:text="@string/dk_btn_string_bind_phone"
	            android:textSize="18sp"
	            android:textColor="@color/dk_gamesdk_white"
            />
        </LinearLayout>
    </RelativeLayout>
	
    <ScrollView
        android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="none"
	    android:layout_marginLeft="16dp"
	    android:layout_marginRight="16dp"
        >
		<FrameLayout android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		        <LinearLayout 
		            android:id="@+id/dk_req_bind_phone_view"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical" 
			        android:paddingBottom="15dp"
			        android:visibility="visible">
					
		            <LinearLayout android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:orientation="horizontal"
		                android:layout_marginTop="24dp"
		                android:gravity="center">
		                
		                <ImageView android:layout_width="80dp"
		                    android:layout_height="80dp"
		                    android:src="@drawable/dk_ic_req_bind_phone"
		                    android:layout_gravity="center"/>
		            </LinearLayout>
		            
		            <LinearLayout android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="24dp"
		                android:orientation="horizontal">
		                
		                <TextView android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:textSize="14sp"
		                    android:textColor="@color/dk_color_333333"
		                    android:text="@string/dk_tv_string_req_bind_msg"/>
		                
		            </LinearLayout>
		            
		            <LinearLayout
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="24dp"
		                android:gravity="center"
		                android:orientation="horizontal" >
		
		                <Button
		                    android:id="@+id/dk_btn_bind_phone"
		                    android:layout_width="fill_parent"
		                    android:layout_height="36dp"
		                    android:background="@drawable/dk_login_btn_selector"
		                    android:text="@string/dk_btn_string_bind_now"
		                    android:gravity="center"
		                    android:textColor="@color/dk_gamesdk_white"
		                    android:textSize="14sp"
		                    android:layout_weight="1"/>
		
		            </LinearLayout>
		            
		            <LinearLayout
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="8dp"
		                android:gravity="center"
		                android:orientation="horizontal" >
		
		                <Button
		                    android:id="@+id/dk_btn_bind_phone_later"
		                    android:layout_width="fill_parent"
		                    android:layout_height="36dp"
		                    android:background="@drawable/dk_register_btn_selector"
		                    android:text="@string/dk_btn_string_bind_later"
		                    android:gravity="center"
		                    android:textColor="@color/dk_color_333333"
		                    android:textSize="14sp"
		                    android:layout_weight="1"/>
		
		            </LinearLayout>
		
		        </LinearLayout>
		        
		        <LinearLayout android:id="@+id/dk_bind_phone_view"
		            android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical" 
			        android:paddingBottom="15dp"
			        android:visibility="gone">
					
		            <LinearLayout android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="24dp"
		                android:orientation="horizontal">
	                
		                <TextView android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:textSize="16sp"
		                    android:textColor="@color/dk_color_333333"
		                    android:text="@string/dk_account_manager_phone"/>
	                
		                <com.duoku.platform.view.DKPhoneEditText android:id="@+id/dk_phone_edit"
		                    android:layout_width="0dp"
		                    android:layout_height="36dp"
		                    android:layout_weight="1"
		                    android:layout_marginLeft="12dp"
		                    android:hint="@string/dk_account_manager_phone_hint"
		                    android:gravity="center_vertical"
		                    android:background="@drawable/dk_edittext_selector"
		                    android:textColorHint="@color/dk_color_999999"
		                    android:singleLine="true"
		                    android:imeOptions="actionDone"/>
	                	
		                <Button android:id="@+id/dk_bind_phone_get_verify_code"
		                    android:layout_width="88dp"
		                    android:layout_height="36dp"
		                    android:layout_marginLeft="8dp"
		                    android:text="@string/dk_btn_string_get_verify_code"
		                    android:textColor="@color/dk_gamesdk_white"
		                    android:textSize="14sp"
		                    android:singleLine="true"
		                    android:background="@drawable/dk_btn_small_blue_selector"/>
	            	</LinearLayout>
	            
		            <LinearLayout android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="16sp"
		                android:orientation="horizontal">
	                
		                <TextView android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:textSize="16sp"
		                    android:textColor="@color/dk_color_333333"
		                    android:text="@string/dk_tv_string_verifycode"/>
	                
		                <EditText android:id="@+id/dk_ver_code_bind_phone_edit"
		                    android:layout_width="fill_parent"
		                    android:layout_height="36dp"
		                    android:layout_marginLeft="12dp"
		                    android:hint="@string/dk_et_string_verifycode_hint"
		                    android:gravity="center_vertical"
		                    android:background="@drawable/dk_edittext_selector"
		                    android:textColorHint="@color/dk_color_999999"
		                    android:singleLine="true"
		                    />
	            	</LinearLayout>
	            
	            	<LinearLayout
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="64dp"
		                android:gravity="center"
		                android:orientation="horizontal" >
	
		                <Button
		                    android:id="@+id/dk_btn_bind_commit"
		                    android:layout_width="fill_parent"
		                    android:layout_height="36dp"
		                    android:background="@drawable/dk_login_btn_selector"
		                    android:text="@string/dk_btn_commit"
		                    android:gravity="center"
		                    android:textColor="@color/dk_gamesdk_white"
		                    android:textSize="14sp"
		                    android:layout_weight="1"/>
	
	            	</LinearLayout>
	            
		            <LinearLayout
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="16dp"
		                android:gravity="center"
		                android:orientation="horizontal" >
		
		                <TextView android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:textSize="14sp"
		                    android:textColor="@color/dk_color_333333"
		                    android:text="@string/dk_tv_string_tip"/>
		
		            </LinearLayout>
				
		            <LinearLayout
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="4dp"
		                android:gravity="center"
		                android:orientation="horizontal" >
		
		                <TextView android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:textSize="12sp"
		                    android:textColor="@color/dk_color_333333"
		                    android:text="@string/dk_tv_string_req_bind_phone_tip_1"/>
	
	            	</LinearLayout>
	            
		            <LinearLayout
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="4dp"
		                android:gravity="center"
		                android:orientation="horizontal" >
		
		                <TextView android:layout_width="fill_parent"
		                    android:layout_height="wrap_content"
		                    android:textSize="12sp"
		                    android:textColor="@color/dk_color_333333"
		                    android:text="@string/dk_tv_string_req_bind_phone_tip_2"/>
		
		            </LinearLayout>
	            
	        </LinearLayout>
        </FrameLayout>
    </ScrollView>
    
</LinearLayout>